k8s/single/client-pod.yaml
apiVersion : v1
kind: Pod
metadata:
  name: client-pod
  labels:
    component: web
spec:
  containers:
    - name: client
      image: 15091983/recipe:v.1.0
      ports: 
        - containerPort: 80
