k8s/single/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: recipe.k3d.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-node-port
            port: 
              number: 3050
